# EggSuite

./: .gitignore  README.md  pyproject.toml
src/badger_plot/: __main__.py
src/badger_plot/apps/data_inspector/: inspector_window.py  uncertainty_window.py
src/badger_plot/apps/hub/: main_menu.py
src/badger_plot/apps/plot_and_stats/: analysis_hist.py  fitting.py  fitting_3d.py  main_window.py  popouts.py
src/badger_plot/apps/plot_and_stats/renderers/: heatmap_renderer.py
src/badger_plot/apps/settings/: settings.py
src/badger_plot/core/: data_loader.py  workspace.py
src/badger_plot/ui/: custom_widgets.py
src/badger_plot/ui/dialogs/: data_mgmt.py  help.py
src/egg_suite/: __main__.py  migrate.py
src/egg_suite/apps/data_inspector/: inspector_window.py
src/egg_suite/apps/hub/: main_menu.py
src/egg_suite/apps/plot_and_stats/: analysis.py  analysis_3d.py  fitting.py  main_window.py  plot_worker.py
src/egg_suite/apps/plot_and_stats/renderers/: renderer_2d.py  renderer_histogram.py
src/egg_suite/apps/settings/: settings.py
src/egg_suite/core/: file_editor.py  history_engine.py  plugin_manager.py  workspace.py
src/egg_suite/external_apps/random_walk_tester/: main.py  manifest.json
src/egg_suite/external_modules/: badger_loop_py3_3.py  matplot_translator.py
src/egg_suite/ui/: custom_widgets.py
src/egg_suite/ui/dialogs/: data_mgmt.py
