[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EggSuite"
version = "1.0.0"
authors = [{name="Claudethelobster"}]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "PyQt6",
    "pyqtgraph",
    "PyOpenGL",
    "PyOpenGL_accelerate",
    "matplotlib",
    "h5py",
    "uncertainties"
]

[project.scripts]
egg_suite = "egg_suite.__main__:main"

[project.urls]
Homepage = "https://github.com/Claudethelobster/EggSuite"

[tool.setuptools]
packages = ["egg_suite"]
include-package-data = true